# agentic-rag

./: README.md  fly.toml  main.py  pyproject.toml  to-drop.md
agentic_rag/: __init__.py
agentic_rag/agent/: __init__.py  guardrails.py  reasoning.py
agentic_rag/api/: __init__.py  app.py  dependencies.py  models.py
agentic_rag/api/routers/: documents.py  health.py  query.py
agentic_rag/indexing/: __init__.py  chunker.py  hybrid_index.py
agentic_rag/ingestion/: __init__.py  pdf_parser.py  table_extractor.py
agentic_rag/output/: __init__.py  synthesizer.py
agentic_rag/retrieval/: hybrid_retriever.py
frontend/: app.js  index.html  style.css
notebooks/: multi-modal-rags.ipynb
notebooks/.ipynb_checkpoints/: multi-modal-rags-checkpoint.ipynb
scripts/: generate_sample_pdfs.py  run_pipeline.py
tests/: __init__.py  conftest.py  test_chunker.py  test_guardrails.py  test_pdf_parser.py
